[gd_scene load_steps=11 format=3 uid="uid://dkfhtetyb4gqm"]

[ext_resource type="Script" uid="uid://b5dgnwt4xdpgr" path="res://scenes/characters/player.gd" id="1_yewv4"]
[ext_resource type="Texture2D" uid="uid://b20yjhpkth0m6" path="res://assets/art/prototype/prototype.png" id="2_76oj4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p57ef"]
size = Vector2(17, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5sy4"]
size = Vector2(20, 4)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lnu2h"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_gee14"]
atlas = ExtResource("2_76oj4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tnpc"]
atlas = ExtResource("2_76oj4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vtaks"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gee14")
}],
"loop": true,
"name": &"bat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tnpc")
}],
"loop": true,
"name": &"human",
"speed": 5.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_kvpfn"]
polygon = PackedVector2Array(-3, -30, 5, -30, 5, -26, -3, -26)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_dinhu"]
polygon = PackedVector2Array(-4, -4, 4, -4, 10, -2, 3, 0, -4, 0, -10, -2)

[node name="Player" type="CharacterBody2D"]
position = Vector2(295, 382)
script = ExtResource("1_yewv4")

[node name="HumanCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_p57ef")

[node name="BatCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_u5sy4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_lnu2h")
sprite_frames = SubResource("SpriteFrames_vtaks")
animation = &"human"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="BatOccluder" type="LightOccluder2D" parent="."]
position = Vector2(-1, 29)
occluder = SubResource("OccluderPolygon2D_kvpfn")

[node name="HumanOccluder" type="LightOccluder2D" parent="."]
position = Vector2(0, 16)
occluder = SubResource("OccluderPolygon2D_dinhu")
sdf_collision = false
